# ds-u2-actividad-1-listasenlazadassimples-Israel2430046

./: CMakeLists.txt  README.md
arduino/: sensor.ino
docs/: Doxyfile
include/: ComunicacionSerial.hpp  GestorSensores.hpp  ListaSensor.hpp  SensorBase.hpp  SensorPresion.hpp  SensorTemperatura.hpp
reporte/: reporte.tex  reporte_simple.tex
src/: main.cpp
